# secure-password-manager

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/pwdmanager/: cli.py  crypto.py  vault.py
