[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-password-manager"
version = "0.1.0"
description = "A secure password manager using Fernet encryption"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Unknown"}]
dependencies = ["cryptography>=42,<43"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pwdman = "pwdmanager.cli:main"
